# stock-listening

./: .gitignore  README.md  backup_script.py  debug_show_fetched.py  listening_history.json  main.py  pyproject.toml  reset_history.py  tpex_warning_page.html  verification_result.txt  verify_2408.py
20260102注意處置資料/: debug_tpex_new_url.py  debug_twse_disp.py  main.py  pyproject.toml
20260102注意處置資料/core/: fetcher.py  predictor.py  test_integration.py  utils.py
20260102注意處置資料/data/: cache.db
20260102注意處置資料/ui/: dashboard.py  details.py  main_window.py  styles.qss
20260104計算處置條件/: backup_project.py  check_selenium.py  debug_2408_parse.py  debug_3006_status.py  debug_3552.py  debug_4967.py  debug_balance_sheet.py  debug_calc_4989.py  debug_dashboard_logic.py  debug_date_parsing_new.py  debug_exclusion_4764.py  debug_exit_date.py  debug_fetch_compare.py  debug_find_145.py  debug_find_shares.py  debug_finmind_minute.py  debug_parsers.py  debug_shares.py  main.py  pyproject.toml  verify_pred.py
20260104計算處置條件/core/: cache.py  parser.py  predictor.py  utils.py
20260104計算處置條件/data/: cache.db  market_data.db
20260104計算處置條件/ui/: dashboard.py
20260105出關日_盤後更新/: backup_project.py  debug_1528.py  debug_2408.py  debug_3006.py  debug_3030.py  debug_8033.py  debug_date.py  debug_finmind_methods.py  debug_history.py  debug_origins.txt  debug_regex.py  debug_reset_check.py  debug_shares_multi.py  debug_tpex_disp.py  debug_tpex_raw.py  verify_db.py  verify_parquet.py
20260106歷史走勢圖/: clear_chart_cache.py  debug_yf_3308.py  main.py  tpex_debug.html  verify_finmind.py  (+2 more)
(+57 files in other folders)
