[project]
name = "disposition-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pyqt6>=6.10.1",
    "pyqtdarktheme>=2.1.0",
    "requests>=2.32.5",
    "unidecode>=1.4.0",
]
