[project]
name = "disposition-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "finmind>=1.9.2",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyqt6>=6.10.1",
    "pyqtdarktheme>=2.1.0",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
]
